apps/portainer/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: ClusterIP
  selector: { app: portainer }
  ports:
    - { name: http,  port: 9000, targetPort: 9000 }
    - { name: https, port: 9443, targetPort: 9443 }
