apps/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ing
  namespace: portainer
spec:
  ingressClassName: nginx
  rules:
    - host: portainer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port: { number: 9000 }
